[package]
name = "nethost-sys"
version = "0.2.5"
description = "FFI bindings for nethost."
readme = "README.md"
repository = "https://github.com/OpenByteDev/nethost-sys"
documentation = "https://docs.rs/nethost-sys"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
links = "nethost"
categories = ["no-std", "external-ffi-bindings"]
keywords = ["nethost", "dotnet", "bindings", "coreclr"]
build = "build/mod.rs"

[dependencies]
coreclr-hosting-shared = "0.1"

[build-dependencies]
build-target = "0.4"
current_platform = { version = "0.2", optional = true }
platforms = { version = "3.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
semver = { version = "1.0", optional = true }
zip = { version = "0.6", optional = true }

[features]
download-nuget = ["reqwest", "serde", "serde_json", "semver", "zip", "platforms", "current_platform"]
download-nuget-target = ["download-nuget"]
download-nuget-system = ["download-nuget"]
